Bug 408416 - Breeze partly ignores color changes at runtime
Summary: Breeze partly ignores color changes at runtime
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.15.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-07 11:35 UTC by Sebastian Kügler
Modified: 2019-06-11 07:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sebastian Kügler 2019-06-07 11:35:02 UTC
SUMMARY
Color changes only partly reflected in Breeze QStyle-styled applications.

STEPS TO REPRODUCE
1. open kcmshell5 colors
2. change to a theme with a different highlight color
3. apply

OBSERVED RESULT
Checkbox in the Colors KCM doesn't change color.

EXPECTED RESULT
Checkbox in the Colors KCM shows the new color.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Neon Git Stable User
(available in About System)
KDE Plasma Version: 5.15
KDE Frameworks Version: 5.58
Qt Version: 5.12

ADDITIONAL INFORMATION
Comment 1 Sebastian Kügler 2019-06-07 11:40:01 UTC
Possibly patch: https://phabricator.kde.org/D21646
Comment 2 Sebastian Kügler 2019-06-08 10:29:48 UTC
Patch submitted, bug can be closed, fixed in 5.16.0. (Don't know why the commit didn't close it automatically, it seems the commit didn't make it into this bugreport.)