re-read color palettes when application color changes

Summary:
Without this patch, changing the application color scheme from system
settings only affects some widgets. Notably, checkboxes highlighting
colors stays the old color, leading to a hodge-podge color scheme and
bad contrast on some items.

The breeze QStyle caches the colors read via KSharedConfig, so it needs
to re-read the configuration when the application color changes.
QApplication emits a signal (originating in KGlobalSettings), which we
can react to.

This fixes the coloring of various widgets in breeze right after color
changes.

BUG:408416
FIXED-IN: 5.16

Those I haven't tested, but look quite suspicious (so please re-test):
CCBUG:382505
CCBUG:355295

Test Plan:
1. open kcmshell5 colors
2. change to a theme with a different highlight color
3. apply
* without patch: checkbox in color KCM (and a whole lot of other
  widgets all over the place) don't change colors
* with patch: colors change as expected

Reviewers: #plasma, broulik, sitter

Reviewed By: #plasma, broulik, sitter

Subscribers: sitter, cfeck, broulik, zzag, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D21646