kstyle/breezestyle.cpp
@@ -197,7 +197,9 @@ namespace Breeze
             QStringLiteral( "/BreezeDecoration" ),
             QStringLiteral( "org.kde.Breeze.Style" ),
             QStringLiteral( "reparseConfiguration" ), this, SLOT(configurationChanged()) );
-
+#if !BREEZE_USE_KDE4
+        connect(qApp, &QApplication::paletteChanged, this, &Style::configurationChanged);
+#endif
         // call the slot directly; this initial call will set up things that also
         // need to be reset when the system palette changes
         loadConfiguration();
